fix(tabs): Use inset focus ring to avoid overflow clipping

--- a/src/components/tabs/_tabs.scss
+++ b/src/components/tabs/_tabs.scss
@@ -57,7 +57,7 @@
 
   &:focus-visible {
     outline: 2px solid tokens.$flexy-sys-color-primary;
-    outline-offset: 0px;
+    outline-offset: -2px;
   }
 }
 
